crates/vesc-ffi/tests/ui/call_io_set_mode_without_unsafe.stderr
error[E0133]: call to unsafe function `io_set_mode` is unsafe and requires unsafe block
 --> tests/ui/call_io_set_mode_without_unsafe.rs:2:13
  |
2 |     let _ = vesc_ffi::raw::io_set_mode(vesc_ffi::VescPin(0), vesc_ffi::VescPinMode(0));
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
  |
  = note: consult the function's documentation for information on how to avoid undefined behavior
